clusters/dextek/apps/default/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.plexuz.xyz/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-external
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: forgejo.png
    gethomepage.dev/name: Forgejo
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/app: forgejo
    gethomepage.dev/description: Self-hosted Git service
spec:
  hostnames:
    - git.plexuz.xyz
  parentRefs:
    - name: gateway-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: forgejo-http
          port: 3000
---
# yaml-language-server: $schema=https://kubernetes-schemas.plexuz.xyz/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-internal
spec:
  hostnames:
    - git.talos.plexuz.xyz
  parentRefs:
    - name: gateway-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: forgejo-http
          port: 3000
